--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ravina",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.54.0"
   }
 }
